--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "stripe-elements": [
+        "dist/stripe-elements/stripe-elements",
+        "dist/stripe-elements"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
