--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -12,8 +12,8 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: '13.x'
+          node-version: '12.x'
           registry-url: https://registry.npmjs.org/
-      - run: npm run lib:publish
-      - run: cd projects/stripe-elements && npm publish --access public
+      - run: npm install
+      - run: npm publish --access public
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
