--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,19 +1,20 @@
-name: Production Deployment
+name: npm-publish
 on:
   push:
     branches:
-      - master
-
+      - master # Change this to your default branch
 jobs:
-  firebase-deploy:
+  npm-publish:
+    name: npm-publish
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - name: Checkout repository
+        uses: actions/checkout@master
+      - name: Set up Node.js
+        uses: actions/setup-node@master
         with:
-          node-version: '12.x'
-          registry-url: https://registry.npmjs.org/
-      - run: npm install
-      - run: npm publish --access public
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          node-version: 10.0.0
+      - name: Publish if version has been updated
+        uses: pascalgn/npm-publish-action@4f4bf159e299f65d21cd1cbd96fc5d53228036df
+        env: # More info about the environment variables in the README
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # You need to set this in your repo se
