--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm run lib:publish
+      - run: npm run lib:build
 
   publish-npm:
     needs: build
