--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "lib:build": "cd projects/stripe-elements && npm install && ng build --prod",
+        "lib:build": "npm install -g @angular/cli && cd projects/stripe-elements && npm install && ng build --prod",
         "lib:publish": "cd projects/stripe-elements && npm publish"
     },
     "private": true,
