--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Node $
         uses: actions/setup-node@v1
         with:
-          node-version: $
+          node-version: [12.x]
 
       - name: npm install and npm run build
         run: |
