--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "ng serve",
         "build": "ng build",
         "build:prod": "ng build --prod",
+        "publish": "cd projects/stripe-elements && npm publish",
         "test": "ng test --watch=false --browsers=ChromeHeadlessCustom",
         "test:watch": "ng test",
         "lint": "ng lint",
