--- a/projects/stripe-elements/package.json
+++ b/projects/stripe-elements/package.json
@@ -1,6 +1,6 @@
 {
     "name": "stripe-elements",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "author": "Leon Kamerlin",
     "description": "Angular Stripe elements",
     "peerDependencies": {
@@ -8,7 +8,9 @@
         "@angular/core": "^9.0.7",
         "tslib": "^1.10.0",
         "@types/stripe-checkout": "^1.0.3",
-        "@types/stripe-v3": "^3.1.17"
+        "@types/stripe-v3": "^3.1.17",
+        "@ngrx/store": "9.1.0",
+        "@ngrx/effects": "^9.1.0"
     },
     "devDependencies": {
         "@types/stripe-checkout": "^1.0.3",
