--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
         "clean": "rimraf ./dist",
         "start": "ng serve",
         "build": "ng build",
-        "build:prod": "ng build --prod",
-        "publish": "cd projects/stripe-elements && npm publish",
+        "build:prod": "ng build --prod && npm run pack:lib",
+        "publish": "npm publish dist/ngx-stripe/stripe-elements-X.X.X.tgz",
+        "pack:lib": "cd dist/stripe-elements && npm pack",
         "test": "ng test --watch=false --browsers=ChromeHeadlessCustom",
         "test:watch": "ng test",
         "lint": "ng lint",
