--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "ng serve",
         "build": "ng build",
         "build:prod": "ng build --prod && npm run pack:lib",
-        "publish": "npm publish dist/ngx-stripe/stripe-elements-X.X.X.tgz",
+        "publish": "npm publish dist/ngx-stripe/*.tgz",
         "pack:lib": "cd dist/stripe-elements && npm pack",
         "test": "ng test --watch=false --browsers=ChromeHeadlessCustom",
         "test:watch": "ng test",
