--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "ngrx-stripe-elements",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "scripts": {
         "ng": "ng",
         "clean": "rimraf ./dist",
         "start": "ng serve",
         "build": "ng build",
         "build:prod": "ng build --prod && npm run pack:lib",
-        "publish": "npm publish dist/ngx-stripe/*.tgz",
+        "publish": "npm publish dist/stripe-elements-X.X.X.tgz",
         "pack:lib": "cd dist/stripe-elements && npm pack",
         "test": "ng test --watch=false --browsers=ChromeHeadlessCustom",
         "test:watch": "ng test",
